--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -4,6 +4,21 @@
     width: 100%;
 }
 
-.profileInfo img {
-    width: 200px;
+.profileInfo {
+    height: 150px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    padding: 5px;
+}
+
+.profileInfo img{
+    height: 150px;
+    width: 80%;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: space-between;
+    background-color: whitesmoke;
 }
